# pyman

./: .gitignore  README.md  pyman  pytest.ini
res/: pyproject.toml
src/: app.py  files.py  project.py
test/: test_basic.py
