[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "%NAME%"
version = "1.0.0"
authors = [
  { name="HaxiDenti", email="sample_mail@gmail.com" },
]
description = "The %NAME% project package"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]