[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "%NAME%"
version = "1.0.0"
authors = [
  { name="HaxiDenti", email="sample_mail@gmail.com" },
]
description = "The %NAME% project package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest",
    "build"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"%NAME%" = ["*.dll", "*.so"]